--- a/src/List.css
+++ b/src/List.css
@@ -25,7 +25,7 @@ ul {
 }
 
 .hide-item {
-  display: none;
+  visibility: hidden;
 }
 
 #complete-svg {
@@ -129,6 +129,14 @@ ul {
   justify-content: center;
 }
 
-#date {
+#select-date {
   margin-left: 1rem;
+  padding: 0.2rem;
+  font-size: 1rem;
+  font-weight: 700;
+  border-radius: 0.1rem;
+}
+
+#select-date:focus {
+  border-color: var(--secondary-color);
 }
